// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleSuggestion should display RuleSuggestion 1`] = `
<div>
  <div>
    <span>
      Gorgias tips placeholder: 
    </span>
    <button
      class="wrapper fill primary small"
      type="button"
    >
      Apply & Send
    </button>
  </div>
</div>
`;

exports[`RuleSuggestion should not display RuleSuggestion (feature flag false) 1`] = `<div />`;

exports[`RuleSuggestion should not display RuleSuggestion (no addon) 1`] = `<div />`;

exports[`RuleSuggestion should not display RuleSuggestion (no suggestion) 1`] = `<div />`;

exports[`RuleSuggestion should send internal note because no text in suggestion 1`] = `
Array [
  Array [
    "nowTimestamp",
    Object {
      "actions": Immutable.List [
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "auto-close",
          },
          "name": "addTags",
          "title": "Add tags",
          "status": "pending",
          "type": "user",
        },
      ],
      "attachments": Array [],
      "body_html": "<div>Sent via suggested rule: my rule</div>",
      "body_text": "Sent via suggested rule: my rule",
      "channel": "email",
      "from_agent": true,
      "macros": Array [],
      "public": false,
      "sender": Object {
        "email": "support@acme.gorgias.io",
        "id": 1,
        "name": "Acme Support",
      },
      "source": Object {
        "extra": Object {},
        "from": Object {
          "address": "",
          "name": "",
        },
        "type": "internal-note",
      },
      "via": "helpdesk",
    },
    null,
  ],
]
`;

exports[`RuleSuggestion should send message 1`] = `
Array [
  Array [
    "nowTimestamp",
    Object {
      "actions": Immutable.List [
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "auto-close",
          },
          "name": "addTags",
          "title": "Add tags",
          "status": "pending",
          "type": "user",
        },
      ],
      "attachments": Array [],
      "body_html": "<div>Text coming from rule suggestion</div>",
      "body_text": "Text coming from rule suggestion",
      "channel": "email",
      "from_agent": true,
      "macros": Array [],
      "public": true,
      "sender": Object {
        "email": "support@acme.gorgias.io",
        "id": 1,
        "name": "Acme Support",
      },
      "source": Object {
        "extra": Object {},
        "from": Object {
          "address": "support@acme.gorgias.io",
        },
        "to": Array [
          Object {
            "address": "steve.frizeli@gmail.com",
            "name": "Steve Frizeli",
          },
        ],
        "type": "email",
      },
      "via": "helpdesk",
    },
    null,
  ],
]
`;
